# open_dji_drone_robot

./: .gitignore  README.md
dji_drone_description/: CMakeLists.txt  README.md  package.xml
dji_drone_description/launch/: display.launch.py
dji_drone_description/meshes/mavic3/: gimbal_0.dae  motor_rb.dae  motor_rf.dae
dji_drone_description/meshes/mavic3e/: camera.dae  gimbal_1.dae  motor_lb.dae  motor_lf.dae
dji_drone_description/meshes/mini3/: camera.dae  gimbal_0.dae  gimbal_1.dae  motor_lb.dae  motor_lf.dae  motor_rb.dae  motor_rf.dae
dji_drone_description/meshes/mini3pro/: camera.dae  gimbal_0.dae  gimbal_1.dae  motor_lb.dae  motor_lf.dae  motor_rb.dae  motor_rf.dae
dji_drone_description/urdf/: mavic3.urdf  mavic3e.urdf  mini3.urdf  mini3pro.urdf
dji_drone_robot/: CMakeLists.txt  package.xml
