<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dji_drone_description</name>
  <version>0.0.0</version>
  <description>URDF and model of DJI drones.</description>
  <maintainer email="zhiyuan@hfg.sc.e.titech.ac.jp">Lu Zhiyuan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>

  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
